--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation("androidx.compose.foundation:foundation")
+
 }
