--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.0'
 
-
+    // Test dependencies
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     //for Room
     implementation "androidx.room:room-common:$room_version"
