--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version "1.8.10-1.0.9"
+    id("org.jetbrains.dokka") version "1.7.20"
+}
+
+subprojects {
+    apply(plugin = "org.jetbrains.dokka")
 }
 
 android {
