--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,11 +60,15 @@ dependencies {
     // Test dependencies
     androidTestImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    androidTestImplementation 'org.mockito:mockito-android:3.10.0'
 
     //for Room
     implementation "androidx.room:room-common:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+
 
 }
