--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+
 }
