--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     implementation "com.google.android.material:material"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -65,29 +67,17 @@ dependencies {
     // Test dependencies
     androidTestImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    androidTestImplementation 'org.mockito:mockito-android:3.10.0'
 
     //for Room
     implementation "androidx.room:room-common:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.navigation:navigation-compose:2.5.3"
-
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
-    androidTestImplementation "androidx.navigation:navigation-testing:2.5.3"
-    debugImplementation "androidx.compose.ui:ui-test-manifest"
-    debugImplementation "androidx.compose.ui:ui-tooling"
-
-    testImplementation 'org.mockito:mockito-core:3.10.0'
-    androidTestImplementation 'org.mockito:mockito-android:3.10.0'
-
-    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
-    androidTestImplementation 'androidx.fragment:fragment-testing:1.3.6'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_ui_version")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
     debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_ui_version")
-
-
 
 
 }
