--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,13 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.mockito:mockito-core:3.10.0'
     androidTestImplementation 'org.mockito:mockito-android:3.10.0'
+    testImplementation 'junit:junit:4.13.2'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.fragment:fragment-testing:1.3.6'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 
     //for Room
     implementation "androidx.room:room-common:$room_version"
@@ -79,5 +86,7 @@ dependencies {
     androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
     debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_ui_version")
 
-
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
 }
